[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flickr_api_history"]

[tool.hatch.build.targets.sdist]
include = [
    "/.gitignore",
    "/.python-version",
    "/Makefile",
    "/README.md",
    "/archive",
    "/flickr_api_history",
    "/methods.lst",
    "/pyproject.toml",
    "/tests",
    "/uv.lock",
]

[project]
name = "flickr-api-history"
version = "0.1.0"
description = "History archive for Flickr API method names and selected method documentation pages."
authors = [
    { name = "Dave Beckett", email = "dave@dajobe.org" },
]
requires-python = ">=3.11"
dependencies = []
readme = "README.md"

[project.scripts]
check-flickr-method-doc = "flickr_api_history.check_method_doc:_cli_entry"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "hatchling",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
check_untyped_defs = true
